<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/login_name"
       />
   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/login_email"
       android:id="@+id/login_user"
       android:inputType="textEmailAddress"
       />
   <View
       android:layout_width="match_parent"
       android:layout_height="20dp"
       />
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/login_senha"
       />
   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/login_password"
       android:id="@+id/login_password"
       android:inputType="textPassword"
       />
   <Button
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/login_button"
       android:textAllCaps="false"
       android:id="@+id/login_button"
       />



</LinearLayout>